# meteobeguda

./: README.md  etl.py  pyproject.toml  streamlit_app.py
.github/.github/workflows/: pr-checks.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: bandit.yml  black.yml  flake8.yml  mypy.yml  pr-checks.yml  setup-uv.yml  tests.yml
data/2022/03/: meteobeguda-2022-03-30.parquet  meteobeguda-2022-03-31.parquet  meteolocal-2022-03-27.parquet
data/2022/04/: meteobeguda-2022-04-02.parquet  meteobeguda-2022-04-04.parquet  meteobeguda-2022-04-05.parquet  meteobeguda-2022-04-08.parquet  meteobeguda-2022-04-10.parquet  meteobeguda-2022-04-13.parquet  meteobeguda-2022-04-14.parquet  meteobeguda-2022-04-15.parquet  meteobeguda-2022-04-16.parquet  meteobeguda-2022-04-17.parquet  meteobeguda-2022-04-18.parquet  meteobeguda-2022-04-19.parquet  meteobeguda-2022-04-20.parquet  meteobeguda-2022-04-21.parquet  meteobeguda-2022-04-22.parquet  meteobeguda-2022-04-23.parquet  meteobeguda-2022-04-24.parquet  meteobeguda-2022-04-25.parquet  meteobeguda-2022-04-26.parquet  meteobeguda-2022-04-27.parquet  meteobeguda-2022-04-28.parquet  meteobeguda-2022-04-29.parquet  meteobeguda-2022-04-30.parquet  meteolocal-2022-04-07.parquet  meteolocal-2022-04-09.parquet  meteolocal-2022-04-12.parquet
data/2022/05/: meteobeguda-2022-05-01.parquet  meteobeguda-2022-05-02.parquet  meteobeguda-2022-05-03.parquet  meteobeguda-2022-05-04.parquet  meteobeguda-2022-05-05.parquet  meteobeguda-2022-05-06.parquet  meteobeguda-2022-05-07.parquet  meteobeguda-2022-05-08.parquet  meteobeguda-2022-05-09.parquet  meteobeguda-2022-05-10.parquet  meteobeguda-2022-05-11.parquet  meteobeguda-2022-05-12.parquet  meteobeguda-2022-05-13.parquet  meteobeguda-2022-05-14.parquet  meteobeguda-2022-05-15.parquet  (+16 more)
meteobeguda/: parser.py  transformer.py
pages/: 01_Meteocat.py
src/meteobeguda/: parser.py  plots.py  transformer.py
tests/: conftest.py  test_fetcher.py  test_parser.py  test_plots.py  test_transformer.py
tests/resources/: eight_days.parquet
(+11 files in other folders)
