[tool.poetry]
name = "meteobeguda"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.0.3"
streamlit = "^1.25.0"
typer = "^0.9.0"
plotly-express = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"
black = "^23.7.0"
types-requests = "^2.31.0.2"
flake8 = "^6.1.0"
bandit = "^1.7.5"
mypy = "^1.4.1"
hypothesis = "^6.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
