[tool.poetry]
name = "meteobeguda"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
streamlit = "^1.35.0"
typer = "^0.12.3"
plotly-express = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
black = "^24.4.2"
types-requests = "^2.32.0.20240602"
flake8 = "^7.0.0"
bandit = "^1.7.9"
mypy = "^1.10.0"
hypothesis = "^6.103.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
