[project]
name = "meteobeguda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alberto Camara", email = "camara@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.0",
    "plotly-express>=0.4.1",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
]

[project.scripts]
meteobeguda = "meteobeguda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "requests-mock>=1.12.1",
    "ruff>=0.11.13",
    "ty>=0.0.1a9",
    "types-requests>=2.32.4.20250611",
]
